k8s/master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: circleguard-ingress
  labels:
    app.kubernetes.io/name: circleguard-ingress
    app.kubernetes.io/component: tls-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - circleguard.local
        - localhost
      secretName: circleguard-tls
  rules:
    - host: circleguard.local
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: circleguard-auth-service
                port:
                  number: 8180
          - path: /gateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: circleguard-gateway-service
                port:
                  number: 8087
    - host: localhost
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: circleguard-auth-service
                port:
                  number: 8180
          - path: /gateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: circleguard-gateway-service
                port:
                  number: 8087
